--- a/README
+++ b/README
@@ -6,7 +6,7 @@
 ### ¿Por qué es importante la investigación reproductible? Para encontrar una respuesta, podemos estudiar sus inicios. A principios de la década de 1990, un geofísico estadounidense llamado John Claerbou realizó la siguiente afirmación:
 > "Al día de hoy, pocos resultados publicados son reproducibles en un sentido práctico. Verificarlos requiere de tanto esfuerzo como el que tomó crearlos. Después de un tiempo, incluso los autores sin incapaces de reproducir sus propios resultados. Por esta razón, muchas personas ignoran la mayor parte de la literatura ciéntifica." (Claerbout, 1992).
 
-### Con el fin de resolver esta problemática, diferentes organizaciones, como el Comité Internacional de Publicaciones de Medicina o la Administración de Alimentos y Medicamentos de Estados Unidos ([FDA](https://www.fda.gov)), empezaron a publicar lineamientos para atacar los problemasderivados de una inadecuada documentación de los experimentos basados con ensayos aleatorios. De manera simultánea, se le dio más importancia a la calidad de los datos utilizados en las investigaciones. Así, por ejemplo, como se muestra en lafigura 1. Mask Ziemann encontró en 2016 que un 20% de los artículos con archivos de datos suplementarios publicados en revistas científicas contenían errores en los nombres de los genes, debido a los parámetros de configuración de Microsoft Excel (Ziemann en at., 2016).
+## Con el fin de resolver esta problemática, diferentes organizaciones, como el Comité Internacional de Publicaciones de Medicina o la Administración de Alimentos y Medicamentos de Estados Unidos ([FDA](https://www.fda.gov)), empezaron a publicar lineamientos para atacar los problemasderivados de una inadecuada documentación de los experimentos basados con ensayos aleatorios. De manera simultánea, se le dio más importancia a la calidad de los datos utilizados en las investigaciones. Así, por ejemplo, como se muestra en lafigura 1. Mask Ziemann encontró en 2016 que un 20% de los artículos con archivos de datos suplementarios publicados en revistas científicas contenían errores en los nombres de los genes, debido a los parámetros de configuración de Microsoft Excel (Ziemann en at., 2016).
 ![](https://gf0604-procesamientodatosgeograficos.github.io/2022-i/img/ZiemannEtAlFig1.png)
 
 ### Figura 1. Resultados de la revisión sistemática de archivos Excel suplementarios. Fuente: (Ziemann et al., 2016).
